Create categorys bar and change bg color app

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
+      <!-- Web manifest -->
+      <link rel="manifest" type="application/json" href="manifest.json">
       <link rel="icon" href="/favicon.ico" />
       <!-- Google font Montserrat -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
