--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <!-- Web manifest -->
       <link rel="manifest" type="application/json" href="manifest.json">
       <link rel="icon" href="/icons/icon-72x72.png" />
+      <meta name="description" content="Marketplace slicing design UI using Vue JS and Tailwindcss" />
       
       <!-- Google font Montserrat -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
